--- a/public/assets/admin/css/admin_custom.css
+++ b/public/assets/admin/css/admin_custom.css
@@ -16,3 +16,58 @@
    padding-right: 5px;
     cursor: pointer;
 }
+
+.red-icon,
+.green-icon,
+.pale-icon{
+    display: block;
+    text-align: center;
+}
+
+.red-icon{
+    color: #f80c35;
+}
+.green-icon{
+    color: #00913b;
+}
+.pale-icon {
+    color: #d8d8d8;
+}
+
+.post_img_upload{
+    position: relative;
+}
+
+.post_img_wrap{
+    background-color: #f8f9fa;
+    border: 1px solid #ced4da;
+    border-radius: 7px;
+    overflow: hidden;
+    padding: 3px;
+    margin-right: 30px;
+}
+.post_img{
+    width: 100%;
+    height: auto;
+}
+
+
+
+.post_btn_img_delete{
+    display: block;
+    width: 25px;
+    height: 25px;
+    color: #a82315;
+    position: absolute;
+    top: 0;
+    right: 0px;
+    font-size: 20px;
+    line-height: 25px;
+    text-align: center;
+    cursor: pointer;
+    transition: color ease .2s
+}
+.post_btn_img_delete:hover{
+    color: #ab154c;
+
+}
