News - CRUD + site.map

--- a/public/assets/admin/css/admin_custom.css
+++ b/public/assets/admin/css/admin_custom.css
@@ -113,4 +113,11 @@
     display: inline-block;
     width: 3rem;
 }
+.one-line{
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 5px;
+}
+
 
